--- a/src/component/Home.css
+++ b/src/component/Home.css
@@ -1,112 +1,141 @@
-*{
+
+
+
+
+
+
+
+
+* {
     padding: 0;
     margin: 0;
 }
-.container{
+.bod{
+
     width: 100%;
     margin: auto;
-    /* display: flex; */
     align-items: center;
     text-align: center;
-    
-
     justify-content: space-around;
-    
+   
 }
-.upper{
+
+.container {
+    /* width: 100%;
+    margin: auto;
+    align-items: center;
+    text-align: center;
+    justify-content: space-around; */
+
+    width: 80%;
+    margin: auto;
+}
+
+.upper {
     display: flex;
     flex-direction: row;
     background-color: white;
-    
     justify-content: space-around;
-    width: 800px;
+    width: 100%;
     align-items: center;
     margin: auto;
-   
 }
-.first{
+
+.first {
     height: 70px;
-    margin-left: 50px;
+    /* margin-left: 50px; */
 }
-.second{
+
+.second {
     height: 200px;
-    margin-left: 50px;
+    /* margin-left: 50px; */
 }
-.upper h1{
-    /* color: rgb(76, 241, 219); */
+
+.upper h1 {
     color: #00B9F1;
-    margin-left: 50px;
-    margin-right: 100px;
+    /* margin-left: 50px;
+    margin-right: 100px; */
 }
-.middle{
-    
+
+.middle {
     display: flex;
     flex-direction: column;
     background-color: rgb(218, 244, 244);
-    width: 800px;
+    width: 100%;
     margin: auto;
     border-radius: 20px;
+    /* height: 100vh; */
 }
-.upp{
+
+.upp {
     display: flex;
     flex-direction: row;
     text-align: center;
     margin: auto;
     margin-top: 30px;
-    
 }
-.sort{
+
+.sort {
     margin-right: 50px;
     padding: 10px;
     color: white;
-    /* background-color: rgb(53, 193, 193); */
     background-color: #00B9F1;
-    /* border: aqua; */
     border-radius: 50%;
 }
-.middle h2{
+
+.middle h2 {
     font-size: 50px;
     margin-top: 30px;
     margin-bottom: 30px;
 }
-h4{
+
+h4 {
     color: rgb(10, 255, 255);
     margin-top: 30px;
     margin-bottom: 40px;
+}
+.rup img{
+    width: 45px;
+    width: 45px;
+    vertical-align: middle;
+    margin-left: 8px;
     
 }
+.rup h2{
+    margin-top: 200px;
+}
 
-.btn{
+.btn {
     display: flex;
     flex-direction: row;
     justify-content: space-around;
     margin-bottom: 40px;
-
 }
-button{
-    padding: 17px 15px 17px 15px;
+
+button {
+    padding: 17px 15px;
     border-radius: 25px;
     background-color: white;
     color: black;
     font-family: Arial, Helvetica, sans-serif;
-
     border-color: transparent;
     font-size: 20px;
 }
-.ft1{
-    width: 800px;
+
+.ft1 {
+    width: 100%;
     height: 30px;
-    /* background-color: rgb(53, 193, 193); */
     background-color: #00B9F1;
-    
 }
-.ft2{
-    width: 800px;
+
+.ft2 {
+    width: 100%;
     height: 30px;
     background-color: rgb(6, 6, 39);
 }
-.aid{
-    width: 800px;
+
+.aid {
+    width: 100%;
     display: flex;
     flex-direction: row;
     margin: auto;
@@ -116,45 +145,42 @@ button{
     border-radius: 17px;
     margin-top: 20px;
     margin-bottom: 20px;
-
 }
-.aid img{
+
+.aid img {
     height: 80px;
 }
-.aid button{
+
+.aid button {
     padding: 5px;
     border-radius: 19px;
-    /* background-color: rgb(53, 193, 193); */
     background-color: #00B9F1;
     color: white;
 }
-.aid h4{
+
+.aid h4 {
     font-size: 20px;
     color: black;
-
 }
-.aid1{
-    width: 800px;
+
+.aid1 {
+    width: 100%;
     height: 75px;
     border: 1px solid black;
     margin: auto;
     border-radius: 17px;
     text-align: start;
     background-color: rgb(218, 244, 244);
-    
-
-    
-   
-
 }
-.aid1 h4{
+
+.aid1 h4 {
     font-size: 20px;
     color: rgb(47, 44, 44);
     margin-left: 20px;
-
 }
-.offer{
-    width: 800px;
+
+.offer {
+    width: 100%;
     display: flex;
     flex-direction: row;
     margin: auto;
@@ -162,53 +188,161 @@ button{
     margin-top: 20px;
     margin-bottom: 20px;
 }
-.last img{
+
+.last img {
     height: 100px;
     width: 100px;
     border-radius: 50%;
 }
-.bottom{
-    width: 800px;
+
+.bottom {
+    width: 100%;
     height: 100px;
     background-color: #002E6E;
     border-radius: 50px;
     margin: auto;
     display: flex;
     flex-direction: row;
-    justify-content: space-aroundcd;
+    justify-content: space-around;
 }
-.bottom img{
+
+.bottom img {
     height: 100px;
     width: 100px;
     border-radius: 50%;
-
 }
-.home img{
+
+.home img {
     background-color: #002E6E;
 }
-.add{
-    width: 800px;
+
+.add {
+    width: 100%;
     margin: auto;
     display: flex;
     flex-direction: row;
     justify-content: space-around;
 }
-.card img{
+
+.card img {
     height: 250px;
     width: 200px;
 }
-.card h4{
+
+.card h4 {
     color: black;
 }
-.card1 img{
+
+.card1 img {
     height: 320px;
     width: 260px;
     margin-top: -50px;
 }
-.card1 h4{
+
+.card1 h4 {
     color: black;
+}
+.rup{
+    margin-top: -10%;
+    margin-bottom: 10%;
 }
 
 
 
 
+@media (max-width: 480px) {
+    .container{
+        width: 90%;
+    }
+    .first {
+        height: 50px;
+        width: 70px;
+    }
+    .second{
+        height: 125px;
+    }
+    .btn button{
+        padding: 6px 5px;
+        border-radius: 12px;
+        font-size: 15px;
+    }
+    .last img {
+        height: 50px;
+        width: 50px;
+        border-radius: 50%;
+    }
+    .aid{
+        height: 65px;
+    }
+    .aid h4{
+        font-size: 15px;
+    }
+    
+    .aid img{
+        height: 50px;
+    }
+    .aid button {
+        padding: 2px;
+        border-radius: 114px;
+        background-color: #00B9F1;
+        color: white;
+        font-size: 15px;
+    }
+    .aid1{
+        height: 55px;
+        
+    }
+    .aid1 h4{
+        font-size: 16px;
+        margin-top: 17px;
+
+    }
+    .sort h1{
+        font-size: 28px;
+    }
+    .full h1{
+        font-size: 28px;
+    }
+    .sort{
+        margin-right: 20px;
+    }
+    .middle{
+        /* height: 46vh; */
+        overflow: hidden;
+        overflow: auto;
+    }
+    .rup{
+        margin-bottom: 1px;
+    }
+    .rup h2{
+        font-size: 40px;
+        margin-top: 30px;
+        
+    }
+    .rup img{
+        width: 31px;
+        height: 31px;
+    }
+    .upp{
+        margin-bottom: 30px;
+    }
+    .rup h4{
+        margin-top: 13px;
+        
+    }
+    .ft1{
+        height: 10px;
+    }
+    .ft2{
+        height: 10px;
+    }
+    .card img{
+        height: 170px;
+        width: 120px;
+    }
+    .card1 img{
+        height: 170px;
+        width: 130px;
+        margin: 0;
+    }
+}
