--- a/src/parent.css
+++ b/src/parent.css
@@ -3,7 +3,7 @@
     margin: o;
 }
 .main{
-    height: 90vh;
+    height: 100vh;
     width: 500px;
     display: flex;
     flex-direction: column;
@@ -35,4 +35,15 @@
 }
 .main button:hover{
     background-color: #00B9F1;
+}
+.creator p{
+    font-family: "Playwrite CU", cursive;
+    text-align: center;
+    margin-top: 100px;
+}
+@media (max-width: 480px) {
+    .main{
+        width: 350px;
+        
+    }
 }
